k8s/services/frontend-canary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-canary
  name: frontend-canary
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample
    role: frontend
    env: canary
  sessionAffinity: None
  type: LoadBalancer
