k8s/services/frontend-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
