k8s/services/frontend-staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-staging
  name: frontend-staging
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-staging
  sessionAffinity: None
  type: LoadBalancer
