k8s/services/node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bkaufcom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bkauf.com
    http:
      paths:
      - path: /*
        #backend:
        backend:
          serviceName: bkauf-gcpdemo
          servicePort: 8080
    #  - path: /health

    #    backend:
    #      serviceName: node-web-app
    #      servicePort: 8080
